discussion/kv_engine/173389/173389_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

toy: add l0 stats

Change-Id: I052362ceac52178645fcaa1ef8d2853818600d03

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2022-04-11 15:39:30.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-11 15:58:28.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45229/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_engine.cc(3026): error C2838: "ep_magma_keyidx_l0_files": illegal qualified name in member declaration ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45229/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37993/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:3026:18:
error: no member named "ep_magma_keyidx_l0_files" in "cb::stats::Key"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37993/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16632/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:3026:18: error: no member named "ep_magma_keyidx_l0_files" in "cb::stats::Key" [clang-diagnostic-error]
    addStat(Key::ep_magma_keyidx_l0_files, "magma_KeyIndexNL0Files");
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:3027:18: error: no member named "ep_magma_seqidx_l0_files" in "cb::stats::Key" [clang-diagnostic-error]
    addStat(Key::ep_magma_seqidx_l0_files, "magma_SeqIndexNL0Files");
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:3028:18: error: no member named "ep_magma_keyidx_l0_size" in "cb::stats::Key" [clang-diagnostic-error]
    addStat(Key::ep_magma_keyidx_l0_size, "magma_KeyIndexL0Size");
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:3029:18: error: no member named "ep_magma_seqidx_l0_size" in "cb::stats::Key" [clang-diagnostic-error]
    addStat(Key::ep_magma_seqidx_l0_size, "magma_SeqIndexL0Size");
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16632/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:3026:18:
error: no member named "ep_magma_keyidx_l0_files" in "cb::stats::Key" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16632/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6284/ : FAILURE

Compile error at [2022-04-11T15:54:25.405Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master@2/kv_engine/engines/ep/src/ep_engine.cc:3026:18:
error: no member named "ep_magma_keyidx_l0_files" in "cb::stats::Key"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6284/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18406/ : FAILURE

Compile error at [2022-04-11T15:54:45.516Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine.cc:3026:18:
error: ?ep_magma_keyidx_l0_files? is not a member of ?cb::stats::Key?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18406/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18743/ : FAILURE

Compile error at [2022-04-11T15:57:39.022Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master@2/kv_engine/engines/ep/src/ep_engine.cc:3026:18:
error: ?ep_magma_keyidx_l0_files? is not a member of ?cb::stats::Key?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18743/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17503/ : FAILURE

Compile error at [2022-04-11T15:44:40.514Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/ep_engine.cc:3026:18:
error: no member named "ep_magma_keyidx_l0_files" in "cb::stats::Key"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17503/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19438/ : FAILURE

Compile error at [2022-04-11T15:56:37.525Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_engine.cc:3026:18:
error: no member named "ep_magma_keyidx_l0_files" in "cb::stats::Key"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19438/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6346/ : FAILURE

Compile error at [2022-04-11T15:47:28.233Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@3/kv_engine/engines/ep/src/ep_engine.cc:3026:18:
error: ?ep_magma_keyidx_l0_files? is not a member of ?cb::stats::Key?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6346/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26813/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15561/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
